<resources>
    <string name="app_name">Jaca</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="username">Username</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="about_me">About Me</string>
    <string name="save">Save</string>
    <string name="new_name">New name</string>
    <string name="new_username">New username</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="delete_account">Delete Account</string>
</resources>